Small buttons and sound buttons (can't show)

--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/CalebT/Dynamic-Design-Final#readme",
   "dependencies": {
-    "next": "^9.3.4",
+    "next": "^9.3.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
